# amux

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN-image-support.md  README.md  flake.nix  go.mod  go.sum  main.go  test-autoscroll.sh  test-lorem.sh
.github/workflows/: ci.yml  release.yml
Formula/: amux.rb
docs/: UNDO_DEBUG_TOOL_JSON.md  acp.md  architecture-comparison.md  gemini-cli-integration-plan.md
internal/agent/: agent.go  scanner.go
internal/claude/: jsonl.go  paths.go  process.go  todos.go  tokens.go
internal/ui/: detail.go  model.go  styles.go  update.go  view.go
internal/watcher/: watcher.go
src/: app.rs  clipboard.rs  config.rs  error.rs  git.rs  log.rs  main.rs  notification.rs  scroll.rs
src/acp/: client.rs  mod.rs  protocol.rs
src/events/: action.rs  handler.rs  keyboard.rs  mod.rs  mouse.rs
src/handlers/: agent.rs  keyboard.rs  mod.rs  permission.rs  question.rs
src/picker/: mod.rs  traits.rs
src/services/: command.rs  mod.rs  repository.rs
src/session/: detection.rs  manager.rs  mod.rs  scanner.rs  state.rs
src/tui/: interaction.rs  mod.rs  theme.rs  ui.rs
src/tui/components/: agent_picker.rs  branch_input.rs  bug_report_popup.rs  clear_confirm_popup.rs  conversation_view.rs  folder_picker.rs  help_popup.rs  mod.rs  permission_dialog.rs  prompt.rs  question_dialog.rs  separators.rs  session_picker.rs  sidebar.rs  worktree_cleanup.rs  worktree_picker.rs
