[package]
name = "amux"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30.0-beta.0"
crossterm = { version = "0.29", features = ["event-stream", "bracketed-paste"] }
tokio = { version = "1", features = ["full", "process"] }
tokio-util = { version = "0.7", features = ["codec"] }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
once_cell = "1"
chrono = "0.4"
dirs = "5"
ratskin = "0.3"
agent-client-protocol = "0.9"
arboard = "3"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
similar = "2"
